# DataSourceTestAvalonia

./: app_settings.json  client_settings.txt
src/DataSourceTestToolClient/Application/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  CMakeLists_Simple.txt  DataSourceTestToolClient.sln  DataSourceTestToolClient.vcxproj  DataSourceTestToolClient.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
src/DataSourceTestToolClient/Application/DataSourceTestToolClient.dir/Debug/DataSour.0380C6E5.tlog/: CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
src/DataSourceTestToolClient/Application/include/: clusterdatasourcemodule.h  clusterdataupdate.h  labelenhanced_module.hpp  mapplugin_module.hpp  modeldata.h  ts.h  value.h
src/DataSourceTestToolClient/Application/kzbFile/: application.cfg
src/DataSourceTestToolClient/Application/kzbFile/Interface/: Adas.xml  Audio.xml  BasicInfo.xml  Common.xml  DriveInfo.xml  DriveMode.xml  ECO.xml  EnergyMonitor.xml  FourWDAndGball.xml  Navigation.xml  Popup.xml  Setting.xml  ShowRoom.xml  TPMS.xml  WarningList.xml
src/DataSourceTestToolClient/Application/src/: Main.cpp  Main_Simple.cpp  TestToolApplication.cpp  TestToolApplication.h  TestToolApplication_Simple.cpp  TestToolApplication_Simple.h  TestToolClient.cpp  TestToolClient.h  TestToolClient_Simple.cpp  TestToolClient_Simple.h  application.cpp  application.h  boost_alternatives.txt  network_client.cpp  network_client.h
src/DataSourceTestToolClient/Application/src/kanzi/: example_application.hpp  kanzi.hpp  kanzi_base.hpp  kanzi_node.hpp  version.hpp
src/DataSourceTestToolClient/Application/src/kanzi/core/: core_api.hpp
src/DataSourceTestToolClient/Application/src/kanzi/core.ui/: coreui_api.hpp
src/DataSourceTestToolClient/Application/src/kanzi/core.ui/action/: action.hpp  action_properties.h  dispatch_message_action.hpp  dispatch_message_action_properties.h  forwarding_action.hpp  play_animation_action.hpp  play_animation_action_properties.h  set_property_action.hpp  set_property_action_properties.h
src/DataSourceTestToolClient/Application/src/kanzi/core.ui/animation/: abstract_animation.hpp  animation_player.hpp  animation_resource.hpp  easing_curve.hpp  easing_curve_shared.hpp  from_to_animation.hpp  interpolation.hpp  keyframe_animation.hpp  media_timeline.hpp  morph_weight_timeline.hpp  morph_weight_timeline_playback.hpp  parallel_timeline.hpp  parallel_timeline_playback.hpp  preview_timeline.hpp  preview_timeline_playback.hpp  property_animation_timeline.hpp  property_animation_timeline_playback.hpp  property_driven_animation_player.hpp  property_field_animation_timeline.hpp  property_field_animation_timeline_playback.hpp  property_field_target_interpolation_timeline_playback.hpp  sequential_timeline.hpp  (+13 more)
src/DataSourceTestToolClient/Application/src/kanzi/js/: execute_script_action.hpp  execute_script_action_properties.h  js_api.hpp  module.hpp
src/DataSourceTestToolClient/Application/src/kanzi/ui/: module.hpp  ui_api.hpp
src/DataSourceTestToolClient/Application/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
src/DataSourceTestToolClient/Application/x64/Debug/DataSourceTestToolClient/: DataSourceTestToolClient.recipe
src/DataSourceTestToolClient/Application/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
(+790 files in other folders)
